WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36929
[Qt] REGRESSION(
r56869
): Windows build is broken
https://bugs.webkit.org/show_bug.cgi?id=36929
Summary
[Qt] REGRESSION(r56869): Windows build is broken
Csaba Osztrogonác
Reported
2010-03-31 22:22:36 PDT
http://trac.webkit.org/changeset/56869
broke QtWebKit build on Windows (MinGW and MSVC build) missing ARRAYSIZE macro: (only with MinGW) ------------------------------------------- ..\..\..\WebCore\platform\UUID.cpp: In function 'WebCore::String WebCore::createCanonicalUUIDString()': ..\..\..\WebCore\platform\UUID.cpp:54: error: 'ARRAYSIZE' was not declared in this scope make.exe[1]: *** [obj/release/UUID.o] Error 1 missing CoCreateGuid() and StringFromGUID2() (Ole32.lib) --------------------------------------------------------- c:/qt/2010.02/mingw/bin/../lib/gcc/mingw32/4.4.0/../../../../mingw32/bin/ld.exe: :0: syntax error Warning: .drectve `-export:T.4466 ' unrecognized ./obj\release\UUID.o:UUID.cpp:(.text+0x1e): undefined reference to `CoCreateGuid@4' ./obj\release\UUID.o:UUID.cpp:(.text+0x3a): undefined reference to `StringFromGUID2@12' collect2: ld returned 1 exit status make.exe[1]: *** [..\lib\QtWebKit4.dll] Error 1
Attachments
proposed fix
(1.23 KB, patch)
2010-03-31 22:34 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
proposed fix
(1.23 KB, patch)
2010-03-31 22:41 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
WinCE buildfix
(953 bytes, patch)
2010-05-05 01:25 PDT
,
Csaba Osztrogonác
hausmann
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2010-03-31 22:34:22 PDT
Created
attachment 52259
[details]
proposed fix Missing "LIBS += -lOle32" added. Missing ARRAYSIZE macro definition added if it isn't defined before. (copied from: \Program Files\Microsoft Platform SDK for Windows Server 2003 R2\Include\CeLib.h)
WebKit Review Bot
Comment 2
2010-03-31 22:37:08 PDT
Attachment 52259
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebCore/platform/UUID.cpp:39: Missing spaces around / [whitespace/operators] [3] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Csaba Osztrogonác
Comment 3
2010-03-31 22:41:04 PDT
Created
attachment 52260
[details]
proposed fix style fixed
Eric Seidel (no email)
Comment 4
2010-03-31 22:46:15 PDT
I see ARRAYSIZE_UNSAFE in:
http://trac.webkit.org/changeset/53634
I thought we had an ARRAYSIZE macro in wtf/StdLibExtras.h, but we don't seem to.
Jian Li
Comment 5
2010-04-01 10:38:15 PDT
Comment on
attachment 52260
[details]
proposed fix r=me
Csaba Osztrogonác
Comment 6
2010-04-01 10:51:20 PDT
(In reply to
comment #5
)
> (From update of
attachment 52260
[details]
) > r=me
Landed in
http://trac.webkit.org/changeset/56922
Csaba Osztrogonác
Comment 7
2010-05-05 01:25:15 PDT
Created
attachment 55097
[details]
WinCE buildfix
Csaba Osztrogonác
Comment 8
2010-05-05 01:27:59 PDT
WinCE build is broken too, fix attached here. See comments in
https://bugs.webkit.org/show_bug.cgi?id=36472
Simon Hausmann
Comment 9
2010-05-05 02:42:49 PDT
Comment on
attachment 55097
[details]
WinCE buildfix rs=me
Csaba Osztrogonác
Comment 10
2010-05-05 05:59:53 PDT
(In reply to
comment #9
)
> (From update of
attachment 55097
[details]
) > rs=me
Landed in
http://trac.webkit.org/changeset/58813
WebKit Review Bot
Comment 11
2010-05-05 06:43:56 PDT
http://trac.webkit.org/changeset/58813
might have broken Qt Linux Release
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug