[Qt] REGRESSION(r56869): Windows build is broken https://bugs.webkit.org/show_bug.cgi?id=36929

Reviewed by Jian Li.

* WebCore.pro: LIBS += -lOle32 added.
* platform/UUID.cpp: Define ARRAYSIZE macro if it isn't defined before.



git-svn-id: svn://svn.chromium.org/blink/trunk@56922 bbb929c8-8fbe-4397-9dbb-9b2b20218538