third_party/WebKit/WebCore/platform/UUID.cpp
@@ -36,6 +36,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #if OS(WINDOWS)
 #include <objbase.h>
+#ifndef ARRAYSIZE
+#define ARRAYSIZE(a)           (sizeof(a) / sizeof((a)[0]))
+#endif
 #elif OS(DARWIN)
 #include <CoreFoundation/CoreFoundation.h>
 #elif OS(LINUX)
