third_party/WebKit/WebCore/WebCore.pro
@@ -2142,6 +2142,7 @@ maemo5 {
 
     win32-* {
         LIBS += -lgdi32
+        LIBS += -lOle32
         LIBS += -luser32
     }
     wince*: LIBS += -lmmtimer
